Update 'go-adepugys' component image to: quay.io/rhtap_qe/go-adepugys:6ff9c66b15d8c3493728b634b64c291c5688e043@sha256:a070f984b396917f3b836ef2a66b4fbbbeffcf7f4f761726d1029d1f5837614b

--- a/components/go-adepugys/overlays/development/deployment-patch.yaml
+++ b/components/go-adepugys/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-adepugys
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-adepugys:6ff9c66b15d8c3493728b634b64c291c5688e043@sha256:a070f984b396917f3b836ef2a66b4fbbbeffcf7f4f761726d1029d1f5837614b
+          name: container-image
